<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.comunicationFragment">

<FrameLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ImageView
        android:layout_marginStart="5dp"
        android:layout_width="10dp"
        android:layout_height="wrap_content"

        android:scaleType="centerCrop">

    </ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginStart="30dp">
    <TextView
        android:id="@+id/comunication_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/communication_title"
        android:textSize="16sp"
        android:layout_marginBottom="26dp"
        android:textStyle="bold"
        android:textColor="@color/gray"/>

        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/communication_a"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/comunication_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/communication_b"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/gray"/>
        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/communication_c"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/gray"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="16sp"
                android:layout_marginStart="18sp"
                />
        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_f"
            android:layout_width="0dp"
            android:layout_weight="95"
            android:layout_height="wrap_content"
            android:text="@string/communication_f"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/gray"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="16sp"
                android:layout_marginStart="18sp"
                />
        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_g"
            android:layout_width="0dp"
            android:layout_weight="95"
            android:layout_height="wrap_content"
            android:text="@string/communication_g"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/gray"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="16sp"
                android:layout_marginStart="18sp"
                />

        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_h"
            android:layout_width="0dp"
            android:layout_weight="95"
            android:layout_height="wrap_content"
            android:text="@string/communication_h"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>


        </LinearLayout>
        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/communication_i"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>
        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_j"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/communication_j"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="20"
            android:background="@drawable/buttons_background"
            android:paddingBottom="5dp"
            android:text="@string/communication_next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"

            />

        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_k"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/communication_k"
            android:textSize="16sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:textColor="@color/gray"
            android:id="@+id/comunication_d"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/communication_d"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/comunication_telephone"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="03 27 87 16 07"
            android:textSize="21sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="50dp"
            android:background="@drawable/buttons_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center"

            />

 <!--       0327871607-->

    </LinearLayout>
    </ScrollView>

</FrameLayout>
</layout>