<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.advanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_grey">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/mjclogo">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advance_a"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        >

    </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advance_b"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            >

        </TextView>


        <Button
            android:id="@+id/btn_confirm_advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/buttons_background"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/advance_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"

            />



    </LinearLayout>

</layout>