<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.distributedConfirmPfFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_grey">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/mjclogo"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Toute l'équipe de la MJC vous remercie"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/gray"
            >

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="de votre soutien et sera heureuse de vous"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/gray"
            >

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="retrouver pour la saison 2020/2021"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/gray"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advance_b"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/gray"

            >

        </TextView>

        <TextView
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advance_c"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            >

        </TextView>


        <TextView
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate_pdf_mail"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            >

        </TextView>


        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/buttons_background"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/advance_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"

            />



    </LinearLayout>


</layout>